Document new HUD bars

--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
     body { margin: 0; overflow: hidden; }
     #levelup { position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,0.8); color: white; display: flex; flex-direction: column; align-items: center; justify-content: center; font-family: sans-serif; }
     #levelup button { margin: 8px; padding: 8px 16px; }
+    #hud { position: absolute; top: 10px; left: 10px; width: 200px; font-family: sans-serif; }
+    .bar { background: #444; width: 200px; height: 16px; margin-bottom: 4px; }
+    .bar-inner { height: 100%; width: 100%; }
+    #healthBar { background: #f55; }
+    #xpBar { background: #5f5; width: 0%; }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.70.0/dist/phaser.min.js"></script>
 </head>
 <body>
   <div id="levelup" style="display:none"></div>
+  <div id="hud">
+    <div id="health" class="bar"><div class="bar-inner" id="healthBar"></div></div>
+    <div id="xp" class="bar"><div class="bar-inner" id="xpBar"></div></div>
+  </div>
   <script type="module" src="main.js"></script>
 </body>
 </html>
